fix: fix services-videos  poster img size on mobile

--- a/wp-app/wp-content/themes/attract/modules/services-videos/services-videos.scss
+++ b/wp-app/wp-content/themes/attract/modules/services-videos/services-videos.scss
@@ -96,6 +96,10 @@
                 transition: 0.22s ease-in-out;
             }
             img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
                 transition: 0.22s ease-in-out;
             }
             .play-video {
